feat: implement soft delete, task text search and checkitem checklist module