@@ -1,28 +1,28 @@
 package com.beat.taskFlow.project.service;
 
-import com.beat.taskFlow.common.exception.AlreadyExistsException;
 import com.beat.taskFlow.common.exception.NotFoundException;
 import com.beat.taskFlow.project.dto.requests.AddMemberRequest;
 import com.beat.taskFlow.project.dto.requests.CreateProjectRequest;
 import com.beat.taskFlow.project.dto.requests.TransferOwnershipRequest;
 import com.beat.taskFlow.project.dto.requests.UpdateProjectRequest;
 import com.beat.taskFlow.project.dto.responses.ProjectResponse;
+import com.beat.taskFlow.project.dto.responses.ProjectStatsResponse;
 import com.beat.taskFlow.project.entity.concretes.Project;
 import com.beat.taskFlow.project.entity.enums.ProjectStatus;
 import com.beat.taskFlow.project.repository.ProjectRepository;
+import com.beat.taskFlow.task.entity.concretes.Task;
+import com.beat.taskFlow.task.entity.enums.TaskStatus;
+import com.beat.taskFlow.task.repository.TaskRepository;
 import com.beat.taskFlow.user.entity.concretes.User;
 import com.beat.taskFlow.user.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
 import org.springframework.security.access.AccessDeniedException;
 import org.springframework.security.core.Authentication;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -30,55 +30,47 @@ public class ProjectService {
 
     private final ProjectRepository projectRepository;
     private final UserRepository userRepository;
+    private final TaskRepository taskRepository;
 
-    private User getCurrentUser(Authentication authentication) {
-        String email = authentication.getName();
-        return userRepository.findByEmail(email).orElseThrow(() -> new NotFoundException("Kullanıcı bulunamadı: " + email));
-    }
+    @Transactional
+    public ProjectResponse createProject(CreateProjectRequest request, Authentication authentication) {
+        User owner = getCurrentUser(authentication);
 
-    private void validateProjectAccess(Project project, User user) {
-        boolean isOwner = project.getOwner().getId().equals(user.getId());
-        boolean isMember = project.getMembers().stream().anyMatch(member -> member.getId().equals(user.getId()));
+        Project project = Project.builder()
+                .name(request.name())
+                .description(request.description())
+                .status(ProjectStatus.ACTIVE)
+                .color(request.color())
+                .tag(request.tag())
+                .owner(owner)
+                .build();
 
-        if (!isOwner && !isMember) {
-            throw new AccessDeniedException("Bu projeye erişim yetkiniz bulunmamaktadır!");
-        }
-    }
-
-    private void validateProjectOwner(Project project, User user) {
-        if (!project.getOwner().getId().equals(user.getId())) {
-            throw new AccessDeniedException("Bu işlem için proje sahibi olmanız gerekmektedir!");
-        }
+        Project savedProject = projectRepository.save(project);
+        return convertToResponse(savedProject);
     }
 
     @Transactional(readOnly = true)
-    public List<ProjectResponse> getAllProjects(Authentication authentication, ProjectStatus status, String search, String sort) {
+    public List<ProjectResponse> getAllProjects(Authentication authentication, ProjectStatus status, String tag, String search) {
         User currentUser = getCurrentUser(authentication);
+        List<Project> projects;
 
-        Sort sorting = Sort.by(Sort.Direction.ASC, "createdAt");
-
-        if ("createdAt,desc".equalsIgnoreCase(sort)) {
-            sorting = Sort.by(Sort.Direction.DESC, "createdAt");
+        if (search != null && !search.trim().isEmpty()) {
+            projects = projectRepository.searchAccessibleProjects(currentUser, search.trim());
+        } else {
+            projects = projectRepository.findAccessibleProjects(currentUser);
         }
 
-        Pageable pageable = PageRequest.of(0, Integer.MAX_VALUE, sorting);
-
-        String searchValue = (search == null || search.isBlank()) ? "" : search;
-
-        return projectRepository.findAccessibleProjects(
-                currentUser.getId(),
-                status,
-                searchValue,
-                pageable
-        ).stream()
+        return projects.stream()
+                .filter(p -> status == null || p.getStatus() == status)
+                .filter(p -> tag == null || (p.getTag() != null && p.getTag().equalsIgnoreCase(tag)))
                 .map(this::convertToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional(readOnly = true)
     public ProjectResponse getProjectById(Long id, Authentication authentication) {
         User currentUser = getCurrentUser(authentication);
-        Project project = projectRepository.findById(id)
+        Project project = projectRepository.findByIdAndIsDeletedFalse(id)
                 .orElseThrow(() -> new NotFoundException("Proje bulunamadı! ID: " + id));
 
         validateProjectAccess(project, currentUser);
@@ -86,34 +78,28 @@ public class ProjectService {
     }
 
     @Transactional
-    public ProjectResponse createProject(CreateProjectRequest request, Authentication authentication) {
-        User currentUser = getCurrentUser(authentication);
-
-        Project project = new Project();
-        project.setName(request.name());
-        project.setDescription(request.description());
-        project.setColor(request.color());
-        project.setTag(request.tag());
-        project.setStatus(ProjectStatus.ACTIVE);
-        project.setOwner(currentUser);
-
-        Project savedProject = projectRepository.save(project);
-        return convertToResponse(savedProject);
-    }
-
-    @Transactional
     public ProjectResponse updateProject(Long id, UpdateProjectRequest request, Authentication authentication) {
         User currentUser = getCurrentUser(authentication);
-        Project project = projectRepository.findById(id)
-                .orElseThrow(() -> new NotFoundException("Güncellenecek proje bulunamadı! ID: " + id));
+        Project project = projectRepository.findByIdAndIsDeletedFalse(id)
+                .orElseThrow(() -> new NotFoundException("Proje bulunamadı! ID: " + id));
 
         validateProjectOwner(project, currentUser);
 
-        project.setName(request.name());
-        project.setDescription(request.description());
-        project.setColor(request.color());
-        project.setTag(request.tag());
-        project.setStatus(request.status());
+        if (request.name() != null && !request.name().trim().isEmpty()) {
+            project.setName(request.name().trim());
+        }
+        if (request.description() != null) {
+            project.setDescription(request.description());
+        }
+        if (request.status() != null) {
+            project.setStatus(request.status());
+        }
+        if (request.color() != null) {
+            project.setColor(request.color());
+        }
+        if (request.tag() != null) {
+            project.setTag(request.tag());
+        }
 
         Project updatedProject = projectRepository.save(project);
         return convertToResponse(updatedProject);
@@ -122,73 +108,67 @@ public class ProjectService {
     @Transactional
     public void deleteProject(Long id, Authentication authentication) {
         User currentUser = getCurrentUser(authentication);
-        Project project = projectRepository.findById(id)
-                .orElseThrow(() -> new NotFoundException("Silinecek proje bulunamadı! ID: " + id));
+        Project project = projectRepository.findByIdAndIsDeletedFalse(id)
+                .orElseThrow(() -> new NotFoundException("Proje bulunamadı! ID: " + id));
 
         validateProjectOwner(project, currentUser);
-        projectRepository.delete(project);
+
+        project.setDeleted(true);
+        project.setDeletedAt(LocalDateTime.now());
+        projectRepository.save(project);
     }
-    
+
     @Transactional
     public ProjectResponse addMember(Long projectId, AddMemberRequest request, Authentication authentication) {
         User currentUser = getCurrentUser(authentication);
-
-        Project project = projectRepository.findById(projectId)
-                .orElseThrow(() ->
-                        new NotFoundException("Proje bulunamadı! ID: " + projectId));
+        Project project = projectRepository.findByIdAndIsDeletedFalse(projectId)
+                .orElseThrow(() -> new NotFoundException("Proje bulunamadı! ID: " + projectId));
 
         validateProjectOwner(project, currentUser);
 
-        User memberToAdd = userRepository.findById(request.userId())
-                .orElseThrow(() ->
-                        new NotFoundException("Eklenecek kullanıcı bulunamadı! ID: " + request.userId()));
+        User newMember = userRepository.findById(request.userId())
+                .orElseThrow(() -> new NotFoundException("Kullanıcı bulunamadı! ID: " + request.userId()));
 
-        boolean isAlreadyMember = project.getMembers()
-                .stream()
-                .anyMatch(member -> member.getId().equals(memberToAdd.getId()));
-
-        if (isAlreadyMember) {
-            throw new AlreadyExistsException("Bu kullanıcı zaten projenin üyesidir.");
+        if (project.getOwner().getId().equals(newMember.getId())) {
+            throw new IllegalArgumentException("Proje sahibi zaten projenin doğal üyesidir.");
         }
 
-        project.getMembers().add(memberToAdd);
-
-        Project updatedProject = projectRepository.save(project);
-
-        return convertToResponse(updatedProject);
+        project.getMembers().add(newMember);
+        Project savedProject = projectRepository.save(project);
+        return convertToResponse(savedProject);
     }
 
     @Transactional
     public ProjectResponse removeMember(Long projectId, Long userId, Authentication authentication) {
         User currentUser = getCurrentUser(authentication);
-
-        Project project = projectRepository.findById(projectId)
-                .orElseThrow(() ->
-                        new NotFoundException("Proje bulunamadı! ID: " + projectId));
+        Project project = projectRepository.findByIdAndIsDeletedFalse(projectId)
+                .orElseThrow(() -> new NotFoundException("Proje bulunamadı! ID: " + projectId));
 
         validateProjectOwner(project, currentUser);
 
         if (project.getOwner().getId().equals(userId)) {
-            throw new AccessDeniedException("Proje sahibi projeden çıkarılamaz.");     
+            throw new AccessDeniedException("Proje sahibi projeden çıkarılamaz.");
         }
 
         User memberToRemove = project.getMembers()
                 .stream()
                 .filter(member -> member.getId().equals(userId))
                 .findFirst()
-                .orElseThrow(() ->
-                        new NotFoundException("Kullanıcı bu projenin üyesi değildir."));
+                .orElseThrow(() -> new NotFoundException("Kullanıcı bu projenin üyesi değildir."));
 
         project.getMembers().remove(memberToRemove);
 
-        Project updatedProject = projectRepository.save(project);
+        List<Task> assignedTasks = taskRepository.findByProjectAndAssignee(project, memberToRemove);
+        assignedTasks.forEach(task -> task.setAssignee(null));
+        taskRepository.saveAll(assignedTasks);
 
+        Project updatedProject = projectRepository.save(project);
         return convertToResponse(updatedProject);
     }
-    
+
     @Transactional
     public void leaveProject(Long projectId, String currentUserEmail) {
-        Project project = projectRepository.findById(projectId)
+        Project project = projectRepository.findByIdAndIsDeletedFalse(projectId)
                 .orElseThrow(() -> new NotFoundException("Proje bulunamadı: id=" + projectId));
 
         User currentUser = userRepository.findByEmail(currentUserEmail)
@@ -203,34 +183,76 @@ public class ProjectService {
         }
 
         project.getMembers().remove(currentUser);
+
+        List<Task> assignedTasks = taskRepository.findByProjectAndAssignee(project, currentUser);
+        assignedTasks.forEach(task -> task.setAssignee(null));
+        taskRepository.saveAll(assignedTasks);
+
         projectRepository.save(project);
     }
 
     @Transactional
-    public ProjectResponse transferOwnership(Long projectId, TransferOwnershipRequest req, String currentUserEmail) {
-        Project project = projectRepository.findById(projectId)
-                .orElseThrow(() -> new NotFoundException("Proje bulunamadı: id=" + projectId));
+    public ProjectResponse transferOwnership(Long projectId, TransferOwnershipRequest request, String currentUserEmail) {
+        Project project = projectRepository.findByIdAndIsDeletedFalse(projectId)
+                .orElseThrow(() -> new NotFoundException("Proje bulunamadı! ID: " + projectId));
 
-        User currentOwner = userRepository.findByEmail(currentUserEmail)
-                .orElseThrow(() -> new NotFoundException("Kullanıcı bulunamadı"));
+        User currentUser = userRepository.findByEmail(currentUserEmail)
+                .orElseThrow(() -> new NotFoundException("Kullanıcı bulunamadı: " + currentUserEmail));
 
-        if (!project.getOwner().getId().equals(currentOwner.getId())) {
-            throw new AccessDeniedException("Yalnızca proje sahibi sahipliği devredebilir.");
-        }
+        validateProjectOwner(project, currentUser);
 
-        User newOwner = userRepository.findById(req.newOwnerId())
-                .orElseThrow(() -> new NotFoundException("Yeni sahip kullanıcı bulunamadı: id=" + req.newOwnerId()));
+        User newOwner = userRepository.findById(request.newOwnerId())
+                .orElseThrow(() -> new NotFoundException("Yeni sahip kullanıcı bulunamadı! ID: " + request.newOwnerId()));
 
-        if (newOwner.getId().equals(currentOwner.getId())) {
-            throw new IllegalArgumentException("Zaten bu projenin sahibisiniz.");
+        if (project.getOwner().getId().equals(newOwner.getId())) {
+            throw new IllegalArgumentException("Kullanıcı zaten bu projenin sahibidir.");
         }
 
         project.getMembers().remove(newOwner);
-        project.getMembers().add(currentOwner);
+        project.getMembers().add(currentUser);
         project.setOwner(newOwner);
 
         Project updatedProject = projectRepository.save(project);
         return convertToResponse(updatedProject);
+    }
+
+    @Transactional(readOnly = true)
+    public ProjectStatsResponse getProjectStats(Long projectId, Authentication authentication) {
+        User currentUser = getCurrentUser(authentication);
+        Project project = projectRepository.findByIdAndIsDeletedFalse(projectId)
+                .orElseThrow(() -> new NotFoundException("Proje bulunamadı! ID: " + projectId));
+
+        validateProjectAccess(project, currentUser);
+
+        List<Task> tasks = taskRepository.findByProjectAndIsDeletedFalse(project);
+
+        long totalTasks = tasks.size();
+        long todoCount = tasks.stream().filter(t -> t.getStatus() == TaskStatus.TODO).count();
+        long inProgressCount = tasks.stream().filter(t -> t.getStatus() == TaskStatus.IN_PROGRESS).count();
+        long doneCount = tasks.stream().filter(t -> t.getStatus() == TaskStatus.DONE).count();
+
+        return new ProjectStatsResponse(totalTasks, todoCount, inProgressCount, doneCount);
+    }
+
+    public void validateProjectAccess(Project project, User user) {
+        boolean isOwner = project.getOwner().getId().equals(user.getId());
+        boolean isMember = project.getMembers().stream().anyMatch(m -> m.getId().equals(user.getId()));
+
+        if (!isOwner && !isMember) {
+            throw new AccessDeniedException("Bu projeye erişim yetkiniz yok!");
+        }
+    }
+
+    public void validateProjectOwner(Project project, User user) {
+        if (!project.getOwner().getId().equals(user.getId())) {
+            throw new AccessDeniedException("Bu işlem için proje sahibi olmanız gerekmektedir!");
+        }
+    }
+
+    private User getCurrentUser(Authentication authentication) {
+        String email = authentication.getName();
+        return userRepository.findByEmail(email)
+                .orElseThrow(() -> new NotFoundException("Giriş yapan kullanıcı bulunamadı!"));
     }
 
     private ProjectResponse convertToResponse(Project project) {
@@ -238,12 +260,12 @@ public class ProjectService {
                 project.getId(),
                 project.getName(),
                 project.getDescription(),
+                project.getStatus(),
                 project.getColor(),
                 project.getTag(),
-                project.getStatus(),
                 project.getOwner().getId(),
                 project.getOwner().getName(),
-                project.getMembers().size() + 1, // owner dahil
+                project.getMembers() != null ? project.getMembers().size() : 0,
                 project.getCreatedAt(),
                 project.getUpdatedAt()
         );
